expand for multi-language support

--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
-<html lang="zh-Hant"><head>
+<html lang="en"><head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="那些生活中的小事，Keeprice幫你記得。">
-    <meta name="keyword" content="keeprice, keeprice-app, 記錄價格, 比價">
+    <meta name="description" content="">
     <meta name="author" content="">
 
-    <meta property="og:title" content="Keeprice 管價格">
-    <meta property="og:description" content="那些生活中的小事，Keeprice幫你記得。">
+    <meta property="og:title" content="Keeprice">
+    <meta property="og:description" content="Those little things , Keeprice remember.">
     <meta property="og:image" content="http://landing-page.keeprice-app.com/img/share_information.png">
     <meta property=”og:type” content”website”/>
-    <meta property=“og:language” content=”zh-Hant”/>
+    <meta property=“og:language” content=”en”/>
     <meta property=“fb:admins” content=“Keeprice-app”/>
 
     <link rel="alternate" href="http://landing-page.keeprice-app.com/index.html" hreflang="zh-Hant" />
@@ -19,7 +18,7 @@
     <link rel="alternate" href="http://landing-page.keeprice-app.com/index.en.html" hreflang="x-default" />
 
 
-    <title>Keeprice 管價格</title>
+    <title>Keeprice</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -73,17 +72,17 @@
                         </li>
 
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-star text-yellow"></i> 語言 <b class="caret"></b></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-star text-yellow"></i> Language <b class="caret"></b></a>
 
                             <ul class="dropdown-menu">
                                 <li class="dropdown-list">
-                                    <a href="index.html"><img src="img/flag/Taiwan.png">  中文(繁體)</a>
+                                    <a href="./zh-Hant/"><img src="img/flag/Taiwan.png">  中文(繁體)</a>
                                 </li>
                                 <li class="dropdown-list">
-                                    <a href="index.cn.html"><img src="img/flag/China.png">  中文(简体)</a>
+                                    <a href="./zh-Hans/"><img src="img/flag/China.png">  中文(简体)</a>
                                 </li>
                                 <li class="dropdown-list">
-                                    <a href="index.en.html"><img src="img/flag/USA.png">   English</a>
+                                    <a href="./"><img src="img/flag/USA.png">   English</a>
                                 </li>
                             </ul>
                         </li>
@@ -95,15 +94,15 @@
                             <a class="page-scroll" href="#portfolio">Portfolio</a>
                         </li>-->
                         <li>
-                            <a class="page-scroll" href="#services">我們提供</a>
+                            <a class="page-scroll" href="#services">Offers</a>
                         </li>
                         <!-- TODO: how to use
                         <li>
-                            <a class="page-scroll" href="#team">如何使用</a>
+                            <a class="page-scroll" href="#team">Instructions</a>
                         </li>
                         -->
                         <li class="">
-                            <a class="page-scroll" href="#contact">立即體驗</a>
+                            <a class="page-scroll" href="#contact">Reservation</a>
                         </li>
                     </ul>
                 </div>
@@ -118,14 +117,14 @@
             <div class="container">
                 <div class="col-lg-4 col-sm-4">
                  <div class="intro-text">
-                <img class="img-responsive intro-leading iphone" src="img/iphone.png" alt="">
+                <img class="img-responsive intro-leading" src="img/iphone.png" alt="">
                 </div>
                 </div>
                 <div class="col-lg-8 col-sm-8">
                 <div class="intro-text">
 
-                    <div class="intro-lead-in">那些生活中的小事，Keeprice幫你記得。</div>
-                    <div class="intro-heading">簡單、快速的計算單價，讓你不再買貴、不再為了忘記買多少錢而苦惱。</div>
+                    <div class="intro-lead-in">Those little things , Keeprice remember.</div>
+                    <div class="intro-heading">Simply calculate unit price , so you do not worry about forgetting how much you spend or overcharged.</div>
                     <a href="#services" class="btn btn-circle page-scroll">
                         <i class="fa fa-angle-double-down animated"></i>
                     </a>
@@ -169,10 +168,10 @@
                         <div class="col-lg-5 col-sm-6">
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
-                            <h2 class="section-heading">即時比價</h2>
-                            <p class="lead"><span style="color:#00caca">價格計算機&nbsp; &nbsp; </span><blank>輕鬆計算商品的最小單位價格。<br>
-                            <span style="color:#00caca">掃描商品條碼&nbsp; &nbsp; </span>帶出以往輸入過的同商品資訊。<br>
-                            <span style="color:#00caca">快速比價清單&nbsp; &nbsp; </span>一鍵操作比較同類型之不同商品價格。</p>
+                            <h2 class="section-heading">INSTANT COMPARE PRICES</h2>
+                            <p class="lead"><span style="color:#00caca;font-weight:600">Price Calculator&nbsp; &nbsp; </span><br><span style="font-size:17px;line-height:30px">Simply calculate the minimum unit price of the products.</span><br>
+                            <span style="color:#00caca;font-weight:600">Scan Barcode&nbsp; &nbsp; </span><br><span style="font-size:17px;line-height:30px">Bring out of the data of the same product you entered.</span><br>
+                            <span style="color:#00caca;font-weight:600">Price Parity List&nbsp; &nbsp; </span><br><span style="font-size:17px;line-height:30px">One button to compare the different type of products.</span></p>
                         </div>
                         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                             <img class="img-responsive" src="img/price_parity.png" alt="">
@@ -192,9 +191,9 @@
                         <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
-                            <h2 class="section-heading">記錄消費</h2>
+                            <h2 class="section-heading">Record Consumption</h2>
                             <p class="lead">
-                            總是想不起以往買過的便宜價格？<br>Keeprice幫你記得每一筆消費，讓你不再為此煩惱。<span></p>
+                            Always forgetting the best price ?<br>Keeprice record your every concumption , so you do not worry about the price anymore.<span></p>
                         </div>
                         <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                             <img class="img-responsive" src="img/recoed_consumption.png" alt="">
@@ -215,8 +214,8 @@
                         <div class="col-lg-5 col-sm-6">
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
-                            <h2 class="section-heading">資訊共享</h2>
-                            <p class="lead">懶得自己輸入每一筆商品資料嗎？<br>那就和親友一起共享Keeprice的價格記錄吧！<br>讓彼此為彼此省下更多荷包和打字時間。</p>
+                            <h2 class="section-heading">Share Data</h2>
+                            <p class="lead">Lazy to enter every data by your own?<br>Then share Keeprice data with your family and friends, Save both time and money!</p>
                         </div>
                         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                             <img class="img-responsive" src="img/share_information.png" alt="">
@@ -237,19 +236,19 @@
         <div class="content-wrapper">
          <div class="container">
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <span style="text-align:center;">
                     <div class="doll-left">
                     <img class="img-responsive" src="img/keeprice_doll01_left.png" alt="">
                     </div>
                 </span>
             </div>
-            <div class="col-md-4" style="text-align: center; margin-top: 30px ">
-                <span style="font-family:'PingFang-TC','Droid Serif','Helvetica Neue','Helvetica',' Arial','sans-serif'; font-size: 19px">隨時隨地計算商品單價，<br>與親友分享最新的價格資訊，<br>加入Keeprice，你可以放心盡情的消費。</span>
+            <div class="col-md-6" style="text-align: center; margin-top: 30px ">
+                <span style="font-family:'PingFang-TC','Droid Serif','Helvetica Neue','Helvetica',' Arial','sans-serif'; font-size:18px;line-height: 50px;">Record price anytime and anywhere.<br>Share the lastest price with friends.<br>Join Keeprice, you can shopping smarter.</span>
                 <!-- <button href="#contact" class="btn btn-xl">Send Message</button> -->
-                <br><br><a class="btn btn-primary btn-lg page-scroll" href="#contact">立即體驗</a>
+                <br><br><a class="btn btn-primary btn-lg page-scroll" href="#contact">Reservation</a>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <img class="img-responsive" src="img/keeprice_doll01_right.png" alt="">
             </div>
 
@@ -365,17 +364,17 @@
                          <div id="mc_embed_signup">
                             <form action="//iiwa-design.us13.list-manage.com/subscribe/post?u=6dfcd558b0dd158652f74d42e&amp;id=28b5cf335c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                 <div id="mc_embed_signup_scroll">
-                                    <h3 class="section-heading">歡迎體驗新時代的比價服務，請留下您的資料，我們將於服務上線時讓您搶先體驗。</h3>
+                                    <h3 class="section-heading"><span style="font-size:20px">Welcome to Keeprice. Please leave your email, we will notify you when publish.</span></h3>
                                     <div class="form-group">
-                                        <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="電子信箱" data-validation-required-message="請輸入您的電子信箱 Please enter your Email.">
+                                        <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Email Address" data-validation-required-message="Please enter your Email.">
                                         <p class="help-block text-danger"></p>
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME" placeholder="名字" data-validation-required-message="Please enter your Frist Name.">
+                                        <input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME" placeholder="First Name" data-validation-required-message="Please enter your Frist Name.">
                                         <p class="help-block text-danger"></p>
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" value="" name="LNAME" class="form-control" id="mce-LNAME" placeholder="姓氏" data-validation-required-message="Please enter your Last Name.">
+                                        <input type="text" value="" name="LNAME" class="form-control" id="mce-LNAME" placeholder="Last Name" data-validation-required-message="Please enter your Last Name.">
                                         <p class="help-block text-danger"></p>
                                     </div>
                                     <div id="mce-responses" class="clear">
@@ -384,9 +383,8 @@
                                  </div>
                              </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6dfcd558b0dd158652f74d42e_28b5cf335c" tabindex="-1" value=""></div>
-                             <div class="clearfix"><input type="submit" value="訂閱最新消息" name="subscribe" id="mc-embedded-subscribe" class="btn-xl btn-xl-full"></div>
-                             <p class="section-footing">我們不會發送廣告信至您的信箱。</p>
-
+                             <div class="clearfix"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn-xl btn-xl-full"></div>
+                             <p class="section-footing">We will not spam you.</p>
                          </div>
                      </form>
                  </div>
@@ -402,7 +400,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright © <!--<a target="_blank" href="http://www.iiwa-design.com">-->IIWA-Design</a> All Right Reserved</span>
+                    <span class="copyright">Copyright © <a target="_blank" href="http://www.iiwa-design.com">IIWA-Design</a> All Right Reserved</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
@@ -412,7 +410,9 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="terms.html">Privacy Policy & User Terms</a>
+                        <li><a href="#">Privacy Policy</a>
+                        </li>
+                        <li><a href="#">Terms of Use</a>
                         </li>
                     </ul>
                 </div>
@@ -596,7 +596,7 @@
         <!-- Bootstrap Core JavaScript -->
         <script src="js/bootstrap.min.js"></script>
 
-        <!-- Plugin JavaScript -->
+        <!-- Plugin JavaScript -->s
         <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
         <script src="js/classie.js"></script>
         <script src="js/cbpAnimatedHeader.js"></script>
