--- a/zh-Hans/index.html
+++ b/zh-Hans/index.html
@@ -1,9 +1,10 @@
-<html lang="cn"><head>
+<html lang="zh-Hans"><head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="那些生活中的小事，Keeprice幫你記得。">
+    <meta name="keyword" content="keeprice, keeprice-app, 記錄價格, 比價">
     <meta name="author" content="">
 
     <meta property="og:title" content="Keeprice 管价格">
@@ -21,14 +22,14 @@
     <title>Keeprice 管价格</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/agency.css" rel="stylesheet">
-    <link href="css/keeprice.css" rel="stylesheet">
+    <link href="../css/agency.css" rel="stylesheet">
+    <link href="../css/keeprice.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css">
@@ -58,7 +59,7 @@
                     </button>
 
                     <div class="keeprice-icon page-scroll">
-                        <img class="img-responsive page-scroll " src="img/keeprice_icon.png" alt="">
+                        <img class="img-responsive page-scroll " src="../img/keeprice_icon.png" alt="">
                         <a class="navbar-brand page-scroll" href="#page-top">Keeprice</a>
                     </div>
 
@@ -77,13 +78,13 @@
 
                             <ul class="dropdown-menu">
                                 <li class="dropdown-list">
-                                    <a href="index.html"><img src="img/flag/Taiwan.png">  中文(繁體)</a>
+                                    <a href="../zh-Hant"><img src="../img/flag/Taiwan.png">  中文(繁體)</a>
                                 </li>
                                 <li class="dropdown-list">
-                                    <a href="index.cn.html"><img src="img/flag/China.png">  中文(简体)</a>
+                                    <a href="./"><img src="../img/flag/China.png">  中文(简体)</a>
                                 </li>
                                 <li class="dropdown-list">
-                                    <a href="index.en.html"><img src="img/flag/USA.png">   English</a>
+                                    <a href="../"><img src="../img/flag/USA.png">   English</a>
                                 </li>
                             </ul>
                         </li>
@@ -117,7 +118,7 @@
             <div class="container">
                 <div class="col-lg-4 col-sm-4">
                  <div class="intro-text">
-                <img class="img-responsive intro-leading iphone" src="img/iphone.png" alt="">
+                <img class="img-responsive intro-leading iphone" src="../img/iphone.png" alt="">
                 </div>
                 </div>
                 <div class="col-lg-8 col-sm-8">
@@ -175,7 +176,7 @@
                         一键操作比较同类型之不同商品价格。</p>
                         </div>
                         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                            <img class="img-responsive" src="img/price_parity.png" alt="">
+                            <img class="img-responsive" src="../img/price_parity.png" alt="">
                         </div>
                     </div>
 
@@ -197,7 +198,7 @@
                             总是想不起以往买过的便宜价格？<br>Keeprice帮你记得每一笔消费，让你不再为此烦恼。<span></p>
                         </div>
                         <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                            <img class="img-responsive" src="img/recoed_consumption.png" alt="">
+                            <img class="img-responsive" src="../img/recoed_consumption.png" alt="">
                         </div>
                     </div>
 
@@ -219,7 +220,7 @@
                             <p class="lead">懒得自己输入每一笔商品资料吗？<br>那就和亲友一起共享KEEPRICE的价格记录吧！<br>让彼此为彼此省下更多荷包和打字时间。</p>
                         </div>
                         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                            <img class="img-responsive" src="img/share_information.png" alt="">
+                            <img class="img-responsive" src="../img/share_information.png" alt="">
                         </div>
                     </div>
 
@@ -240,7 +241,7 @@
             <div class="col-md-4">
                 <span style="text-align:center;">
                     <div class="doll-left">
-                    <img class="img-responsive" src="img/keeprice_doll01_left.png" alt="">
+                    <img class="img-responsive" src="../img/keeprice_doll01_left.png" alt="">
                     </div>
                 </span>
             </div>
@@ -250,7 +251,7 @@
                 <br><br><a class="btn btn-primary btn-lg page-scroll" href="#contact">立即体验</a>
             </div>
             <div class="col-md-4">
-                <img class="img-responsive" src="img/keeprice_doll01_right.png" alt="">
+                <img class="img-responsive" src="../img/keeprice_doll01_right.png" alt="">
             </div>
 
 
@@ -358,7 +359,7 @@
                     <div class="row register-form">
                         <div class="col-md-4">
 
-                           <img class="img-responsive keeprice-logo" src="img/keeprice_logo.png" alt="">
+                           <img class="img-responsive keeprice-logo" src="../img/keeprice_logo.png" alt="">
                        </div>
 
                        <div class="col-md-8">
@@ -441,7 +442,7 @@
                             <!-- Project Details Go Here -->
                             <h2>Project Name</h2>
                             <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
+                            <img class="img-responsive img-centered" src="../img/portfolio/roundicons-free.png" alt="">
                             <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                             <p>
                                 <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
@@ -473,7 +474,7 @@
                             <div class="modal-body">
                                 <h2>Project Heading</h2>
                                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/startup-framework-preview.png" alt="">
+                                <img class="img-responsive img-centered" src="../img/portfolio/startup-framework-preview.png" alt="">
                                 <p><a href="http://designmodo.com/startup/?u=787">Startup Framework</a> is a website builder for professionals. Startup Framework contains components and complex blocks (PSD+HTML Bootstrap themes and templates) which can easily be integrated into almost any design. All of these components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions for your future projects.</p>
                                 <p>You can preview Startup Framework <a href="http://designmodo.com/startup/?u=787">here</a>.</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
@@ -500,7 +501,7 @@
                                 <!-- Project Details Go Here -->
                                 <h2>Project Name</h2>
                                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/treehouse-preview.png" alt="">
+                                <img class="img-responsive img-centered" src="../img/portfolio/treehouse-preview.png" alt="">
                                 <p>Treehouse is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. This is bright and spacious design perfect for people or startup companies looking to showcase their apps or other projects.</p>
                                 <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/treehouse-free-psd-web-template/">FreebiesXpress.com</a>.</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
@@ -527,7 +528,7 @@
                                 <!-- Project Details Go Here -->
                                 <h2>Project Name</h2>
                                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/golden-preview.png" alt="">
+                                <img class="img-responsive img-centered" src="../img/portfolio/golden-preview.png" alt="">
                                 <p>Start Bootstrap's Agency theme is based on Golden, a free PSD website template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Golden is a modern and clean one page web template that was made exclusively for Best PSD Freebies. This template has a great portfolio, timeline, and meet your team sections that can be easily modified to fit your needs.</p>
                                 <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/golden-free-one-page-web-template/">FreebiesXpress.com</a>.</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
@@ -554,7 +555,7 @@
                                 <!-- Project Details Go Here -->
                                 <h2>Project Name</h2>
                                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/escape-preview.png" alt="">
+                                <img class="img-responsive img-centered" src="../img/portfolio/escape-preview.png" alt="">
                                 <p>Escape is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Escape is a one page web template that was designed with agencies in mind. This template is ideal for those looking for a simple one page solution to describe your business and offer your services.</p>
                                 <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/escape-one-page-psd-web-template/">FreebiesXpress.com</a>.</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
@@ -581,7 +582,7 @@
                                 <!-- Project Details Go Here -->
                                 <h2>Project Name</h2>
                                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/dreams-preview.png" alt="">
+                                <img class="img-responsive img-centered" src="../img/portfolio/dreams-preview.png" alt="">
                                 <p>Dreams is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Dreams is a modern one page web template designed for almost any purpose. It’s a beautiful template that’s designed with the Bootstrap framework in mind.</p>
                                 <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/dreams-free-one-page-web-template/">FreebiesXpress.com</a>.</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
@@ -593,22 +594,22 @@
         </div>
 
         <!-- jQuery -->
-        <script src="js/jquery.js"></script>
+        <script src="../js/jquery.js"></script>
 
         <!-- Bootstrap Core JavaScript -->
-        <script src="js/bootstrap.min.js"></script>
+        <script src="../js/bootstrap.min.js"></script>
 
         <!-- Plugin JavaScript -->
         <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-        <script src="js/classie.js"></script>
-        <script src="js/cbpAnimatedHeader.js"></script>
+        <script src="../js/classie.js"></script>
+        <script src="../js/cbpAnimatedHeader.js"></script>
 
         <!-- Contact Form JavaScript -->
-        <script src="js/jqBootstrapValidation.js"></script>
+        <script src="../js/jqBootstrapValidation.js"></script>
         <!-- <script src="js/contact_me.js"></script> -->
 
         <!-- Custom Theme JavaScript -->
-        <script src="js/agency.js"></script>
+        <script src="../js/agency.js"></script>
 
 
 <script type="text/javascript">CRISP_WEBSITE_ID = "ddb18395-06e9-4a61-b2d6-41564917e6f9";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.im/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
