update alternate href setting

--- a/zh-Hant/index.html
+++ b/zh-Hant/index.html
@@ -14,9 +14,9 @@
     <meta property=“og:language” content=”zh-Hant”/>
     <meta property=“fb:admins” content=“Keeprice-app”/>
 
-    <link rel="alternate" href="http://landing-page.keeprice-app.com/index.html" hreflang="zh-Hant" />
-    <link rel="alternate" href="http://landing-page.keeprice-app.com/index.cn.html" hreflang="zh-Hans" />
-    <link rel="alternate" href="http://landing-page.keeprice-app.com/index.en.html" hreflang="x-default" />
+    <link rel="alternate" href="http://landing-page.keeprice-app.com/zh-Hant/" hreflang="zh-Hant" />
+    <link rel="alternate" href="http://landing-page.keeprice-app.com/zh-Hans/" hreflang="zh-Hans" />
+    <link rel="alternate" href="http://landing-page.keeprice-app.com/" hreflang="x-default" />
 
 
     <title>Keeprice 管價格</title>
