fixed link for terms

--- a/index.html
+++ b/index.html
@@ -410,9 +410,7 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
-                        </li>
-                        <li><a href="#">Terms of Use</a>
+                        <li><a href="terms.html">Privacy Policy & User Terms</a>
                         </li>
                     </ul>
                 </div>
