--- a/zh-Hant/index.html
+++ b/zh-Hant/index.html
@@ -412,7 +412,7 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="terms.html">Privacy Policy & User Terms</a>
+                        <li><a href="../terms.html">Privacy Policy & User Terms</a>
                         </li>
                     </ul>
                 </div>
