英文版內容修正(玉潔翻譯版)

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         </li>
                         -->
                         <li class="">
-                            <a class="page-scroll" href="#contact">Reservation</a>
+                            <a class="page-scroll" href="#contact">GIVE IT A TRY </a>
                         </li>
                     </ul>
                 </div>
@@ -123,8 +123,8 @@
                 <div class="col-lg-8 col-sm-8">
                 <div class="intro-text">
 
-                    <div class="intro-lead-in">Those little things , Keeprice remember.</div>
-                    <div class="intro-heading">Simply calculate unit price , so you do not worry about forgetting how much you spend or overcharged.</div>
+                    <div class="intro-lead-in">Those little things , Keeprice remembers.</div>
+                    <div class="intro-heading">With easy and quick calculating, you do not need to worry about overspending or forgetting how much you spend.</div>
                     <a href="#services" class="btn btn-circle page-scroll">
                         <i class="fa fa-angle-double-down animated"></i>
                     </a>
@@ -168,10 +168,10 @@
                         <div class="col-lg-5 col-sm-6">
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
-                            <h2 class="section-heading">INSTANT COMPARE PRICES</h2>
-                            <p class="lead"><span style="color:#00caca;font-weight:600">Price Calculator&nbsp; &nbsp; </span><br><span style="font-size:17px;line-height:30px">Simply calculate the minimum unit price of the products.</span><br>
-                            <span style="color:#00caca;font-weight:600">Scan Barcode&nbsp; &nbsp; </span><br><span style="font-size:17px;line-height:30px">Bring out of the data of the same product you entered.</span><br>
-                            <span style="color:#00caca;font-weight:600">Price Parity List&nbsp; &nbsp; </span><br><span style="font-size:17px;line-height:30px">One button to compare the different type of products.</span></p>
+                            <h2 class="section-heading">INSTANT PRICE-COMPARISON</h2>
+                            <p class="lead"><span style="color:#00caca;font-weight:600">Price Calculator&nbsp; &nbsp; </span><br><span style="font-size:17px;line-height:30px">Calculate the minimum unit price of the products.</span><br>
+                            <span style="color:#00caca;font-weight:600">Barcode Scanner&nbsp; &nbsp; </span><br><span style="font-size:17px;line-height:30px">Bring out the data of the same product you’ve entered.</span><br>
+                            <span style="color:#00caca;font-weight:600">Price Parity List&nbsp; &nbsp; </span><br><span style="font-size:17px;line-height:30px">Compare prices among similar type of products with a single button.</span></p>
                         </div>
                         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                             <img class="img-responsive" src="img/price_parity.png" alt="">
@@ -191,9 +191,9 @@
                         <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
-                            <h2 class="section-heading">Record Consumption</h2>
+                            <h2 class="section-heading">RECORD YOUR SPENDING</h2>
                             <p class="lead">
-                            Always forgetting the best price ?<br>Keeprice record your every concumption , so you do not worry about the price anymore.<span></p>
+                            Always forgetting about the best price?<br>Use Keeprice to record your every spending so that there’s no need for you to worry about.<span></p>
                         </div>
                         <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                             <img class="img-responsive" src="img/recoed_consumption.png" alt="">
@@ -214,8 +214,8 @@
                         <div class="col-lg-5 col-sm-6">
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
-                            <h2 class="section-heading">Share Data</h2>
-                            <p class="lead">Lazy to enter every data by your own?<br>Then share Keeprice data with your family and friends, Save both time and money!</p>
+                            <h2 class="section-heading">DATA SHARING</h2>
+                            <p class="lead">Being lazy to enter every data on your own?<br>Then share the data in Keeprice with your family and friends. Save both time and money!</p>
                         </div>
                         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                             <img class="img-responsive" src="img/share_information.png" alt="">
@@ -244,9 +244,9 @@
                 </span>
             </div>
             <div class="col-md-6" style="text-align: center; margin-top: 30px ">
-                <span style="font-family:'PingFang-TC','Droid Serif','Helvetica Neue','Helvetica',' Arial','sans-serif'; font-size:18px;line-height: 50px;">Record price anytime and anywhere.<br>Share the lastest price with friends.<br>Join Keeprice, you can shopping smarter.</span>
+                <span style="font-family:'PingFang-TC','Droid Serif','Helvetica Neue','Helvetica',' Arial','sans-serif'; font-size:18px;line-height: 50px;">Keep the price anytime and anywhere.<br>Share the latest price with friends.<br>Join Keeprice and enjoy your shopping.</span>
                 <!-- <button href="#contact" class="btn btn-xl">Send Message</button> -->
-                <br><br><a class="btn btn-primary btn-lg page-scroll" href="#contact">Reservation</a>
+                <br><br><a class="btn btn-primary btn-lg page-scroll" href="#contact">GIVE IT A TRY</a>
             </div>
             <div class="col-md-3">
                 <img class="img-responsive" src="img/keeprice_doll01_right.png" alt="">
@@ -364,7 +364,7 @@
                          <div id="mc_embed_signup">
                             <form action="//iiwa-design.us13.list-manage.com/subscribe/post?u=6dfcd558b0dd158652f74d42e&amp;id=28b5cf335c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                 <div id="mc_embed_signup_scroll">
-                                    <h3 class="section-heading"><span style="font-size:20px">Welcome to Keeprice. Please leave your email, we will notify you when publish.</span></h3>
+                                    <h3 class="section-heading"><span style="font-size:20px">Welcome to Keeprice.<br> Please leave your name and email. We will notify you when released.</span></h3>
                                     <div class="form-group">
                                         <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Email Address" data-validation-required-message="Please enter your Email.">
                                         <p class="help-block text-danger"></p>
