--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="keeprice,keeprice-app,prices,prices-app,price-parity,record-spending,record-prices">
+    <meta name="author" content="IIWA-Design">
 
     <meta property="og:title" content="Keeprice">
-    <meta property="og:description" content="Those little things , Keeprice remember.">
+    <meta property="og:description" content="Those little things, Keeprice remembers.">
     <meta property="og:image" content="http://landing-page.keeprice-app.com/img/share_information.png">
     <meta property=”og:type” content”website”/>
     <meta property=“og:language” content=”en”/>
@@ -18,7 +18,7 @@
     <link rel="alternate" href="http://landing-page.keeprice-app.com/" hreflang="x-default" />
 
 
-    <title>Keeprice</title>
+    <title>Keeprice 管價格</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -123,7 +123,7 @@
                 <div class="col-lg-8 col-sm-8">
                 <div class="intro-text">
 
-                    <div class="intro-lead-in">Those little things , Keeprice remembers.</div>
+                    <div class="intro-lead-in">Those little things, Keeprice remembers.</div>
                     <div class="intro-heading">With easy and quick calculating, you do not need to worry about overspending or forgetting how much you spend.</div>
                     <a href="#services" class="btn btn-circle page-scroll">
                         <i class="fa fa-angle-double-down animated"></i>
