--- a/zh-Hans/index.html
+++ b/zh-Hans/index.html
@@ -3,9 +3,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="那些生活中的小事，Keeprice幫你記得。">
-    <meta name="keyword" content="keeprice, keeprice-app, 記錄價格, 比價">
-    <meta name="author" content="">
+    <meta name="description" content="那些生活中的小事，Keeprice帮你记得。">
+    <meta name="keyword" content="keeprice,keeprice-app,管价格,记录价格,比价,价格app,比价app">
+    <meta name="author" content="IIWA-Design">
 
     <meta property="og:title" content="Keeprice 管价格">
     <meta property="og:description" content="那些生活中的小事，Keeprice帮你记得。">
