--- a/zh-Hant/index.html
+++ b/zh-Hant/index.html
@@ -4,8 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="那些生活中的小事，Keeprice幫你記得。">
-    <meta name="keyword" content="keeprice, keeprice-app, 記錄價格, 比價">
-    <meta name="author" content="">
+    <meta name="keyword" content="keeprice,keeprice-app,管價格,記錄價格,比價,價格app,比價app">
+    <meta name="author" content="IIWA-Design">
 
     <meta property="og:title" content="Keeprice 管價格">
     <meta property="og:description" content="那些生活中的小事，Keeprice幫你記得。">
