iPhone手機換圖_依據語言不同更換

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="keeprice,keeprice-app,prices,prices-app,price-parity,record-spending,record-prices">
+    <meta name="description" content="keeprice,keeprice-app,keepriceapp,price,prices-app,price-parity,record-spending,record-prices">
     <meta name="author" content="IIWA-Design">
 
     <meta property="og:title" content="Keeprice">
@@ -117,7 +117,7 @@
             <div class="container">
                 <div class="col-lg-4 col-sm-4">
                  <div class="intro-text">
-                <img class="img-responsive intro-leading" src="img/iphone.png" alt="">
+                <img class="img-responsive intro-leading" src="img/iphone_en.png" alt="">
                 </div>
                 </div>
                 <div class="col-lg-8 col-sm-8">
