--- a/zh-Hans/index.html
+++ b/zh-Hans/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="那些生活中的小事，Keeprice帮你记得。">
-    <meta name="keyword" content="keeprice,keeprice-app,管价格,记录价格,比价,价格app,比价app">
+    <meta name="keyword" content="keeprice,keeprice-app,keepriceapp,管价格,记录价格,比价,价格app,比价app">
     <meta name="author" content="IIWA-Design">
 
     <meta property="og:title" content="Keeprice 管价格">
@@ -118,7 +118,7 @@
             <div class="container">
                 <div class="col-lg-4 col-sm-4">
                  <div class="intro-text">
-                <img class="img-responsive intro-leading iphone" src="../img/iphone.png" alt="">
+                <img class="img-responsive intro-leading iphone" src="../img/iphone_cn.png" alt="">
                 </div>
                 </div>
                 <div class="col-lg-8 col-sm-8">
