--- a/zh-Hant/index.html
+++ b/zh-Hant/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="那些生活中的小事，Keeprice幫你記得。">
-    <meta name="keyword" content="keeprice,keeprice-app,管價格,記錄價格,比價,價格app,比價app">
+    <meta name="keyword" content="keeprice,keeprice-app,keepriceapp,管價格,記錄價格,比價,價格app,比價app">
     <meta name="author" content="IIWA-Design">
 
     <meta property="og:title" content="Keeprice 管價格">
@@ -118,7 +118,7 @@
             <div class="container">
                 <div class="col-lg-4 col-sm-4">
                  <div class="intro-text">
-                <img class="img-responsive intro-leading iphone" src="../img/iphone.png" alt="">
+                <img class="img-responsive intro-leading iphone" src="../img/iphone_tw.png" alt="">
                 </div>
                 </div>
                 <div class="col-lg-8 col-sm-8">
