1. 新增：本站所引用之商品圖片其商標及相關權利歸屬其原公司。 2. 下拉箭頭RWD畫面調整

--- a/zh-Hans/index.html
+++ b/zh-Hans/index.html
@@ -119,6 +119,7 @@
                 <div class="col-lg-4 col-sm-4">
                  <div class="intro-text">
                 <img class="img-responsive intro-leading iphone" src="../img/iphone_cn.png" alt="">
+                <div class="iphone-remark">本站所引用之商品图片其商标及相关权利归属其原公司。</div>
                 </div>
                 </div>
                 <div class="col-lg-8 col-sm-8">
