--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
                 <div class="col-lg-4 col-sm-4">
                  <div class="intro-text">
                 <img class="img-responsive intro-leading" src="img/iphone_en.png" alt="">
+                <div class="iphone-remark">The rights of trademarks and design of each product above are belong to their original company.</div>
                 </div>
                 </div>
                 <div class="col-lg-8 col-sm-8">
@@ -364,7 +365,7 @@
                          <div id="mc_embed_signup">
                             <form action="//iiwa-design.us13.list-manage.com/subscribe/post?u=6dfcd558b0dd158652f74d42e&amp;id=28b5cf335c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                 <div id="mc_embed_signup_scroll">
-                                    <h3 class="section-heading"><span style="font-size:20px">Welcome to Keeprice.<br> Please leave your name and email. We will notify you when released.</span></h3>
+                                    <h3 class="section-heading"><span style="font-size:20px">Welcome to Keeprice !<br> Please leave your name and email. We will notify you when released.</span></h3>
                                     <div class="form-group">
                                         <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Email Address" data-validation-required-message="Please enter your Email.">
                                         <p class="help-block text-danger"></p>
