--- a/zh-Hant/index.html
+++ b/zh-Hant/index.html
@@ -119,6 +119,10 @@
                 <div class="col-lg-4 col-sm-4">
                  <div class="intro-text">
                 <img class="img-responsive intro-leading iphone" src="../img/iphone_tw.png" alt="">
+                <div class="iphone-remark">本站所引用之商品圖片其商標及相關權利歸屬其原公司。</div>
+
+
+
                 </div>
                 </div>
                 <div class="col-lg-8 col-sm-8">
