--- a/zh-Hans/index.html
+++ b/zh-Hans/index.html
@@ -414,7 +414,7 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="../terms.html">Privacy Policy & User Terms</a>
+                        <li><a href="../terms.html" target="_blank">Privacy Policy &amp; User Terms</a>
                         </li>
                     </ul>
                 </div>
