--- a/zh-Hant/index.html
+++ b/zh-Hant/index.html
@@ -120,9 +120,6 @@
                  <div class="intro-text">
                 <img class="img-responsive intro-leading iphone" src="../img/iphone_tw.png" alt="">
                 <div class="iphone-remark">本站所引用之商品圖片其商標及相關權利歸屬其原公司。</div>
-
-
-
                 </div>
                 </div>
                 <div class="col-lg-8 col-sm-8">
@@ -416,7 +413,7 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="../terms.html">Privacy Policy & User Terms</a>
+                        <li><a href="../terms.html" target="_blank">Privacy Policy &amp; User Terms</a>
                         </li>
                     </ul>
                 </div>
