--- a/zh-Hant/index.html
+++ b/zh-Hant/index.html
@@ -612,5 +612,15 @@
 
 <script type="text/javascript">CRISP_WEBSITE_ID = "ddb18395-06e9-4a61-b2d6-41564917e6f9";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.im/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-79836148-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 </body></html>
