1. 字體過細修正  2.英文版belong to前面的are去掉

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="col-lg-4 col-sm-4">
                  <div class="intro-text">
                 <img class="img-responsive intro-leading" src="img/iphone_en.png" alt="">
-                <div class="iphone-remark">The rights of trademarks and design of each product above are belong to their original company.</div>
+                <div class="iphone-remark"><p style="font-size:14px;">The rights of trademarks and design of each product above belong to their original company.</div>
                 </div>
                 </div>
                 <div class="col-lg-8 col-sm-8">
@@ -245,7 +245,7 @@
                 </span>
             </div>
             <div class="col-md-6" style="text-align: center; margin-top: 30px ">
-                <span style="font-family:'PingFang-TC','Droid Serif','Helvetica Neue','Helvetica',' Arial','sans-serif'; font-size:18px;line-height: 50px;">Keep the price anytime and anywhere.<br>Share the latest price with friends.<br>Join Keeprice and enjoy your shopping.</span>
+                <span style="font-family:'Droid Serif','PingFang-TC','Helvetica Neue','Helvetica',' Arial','sans-serif'; font-size:18px;line-height: 50px" >Keep the price anytime and anywhere.<br>Share the latest price with friends.<br>Join Keeprice and enjoy your shopping.</span>
                 <!-- <button href="#contact" class="btn btn-xl">Send Message</button> -->
                 <br><br><a class="btn btn-primary btn-lg page-scroll" href="#contact">GIVE IT A TRY</a>
             </div>
