--- a/zh-Hans/index.html
+++ b/zh-Hans/index.html
@@ -247,7 +247,7 @@
                 </span>
             </div>
             <div class="col-md-4" style="text-align: center; margin-top: 30px ">
-                <span style="font-family:'PingFang-TC','Droid Serif','Helvetica Neue','Helvetica',' Arial','sans-serif'; font-size: 19px">随时随地计算商品单价，<br>与亲友分享最新的价格资讯<br>加入Keeprice，你可以放心尽情的消费。</span>
+                <span style="font-family:'Droid Serif','PingFang-TC','Helvetica Neue','Helvetica',' Arial','sans-serif'; font-size: 19px">随时随地计算商品单价，<br>与亲友分享最新的价格资讯<br>加入Keeprice，你可以放心尽情的消费。</span>
                 <!-- <button href="#contact" class="btn btn-xl">Send Message</button> -->
                 <br><br><a class="btn btn-primary btn-lg page-scroll" href="#contact">立即体验</a>
             </div>
