手機畫面字體斷行修正

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="col-lg-4 col-sm-4">
                  <div class="intro-text">
                 <img class="img-responsive intro-leading" src="img/iphone_en.png" alt="">
-                <div class="iphone-remark"><p style="font-size:14px;">The rights of trademarks and design of each product above belong to their original company.</div>
+                <div class="iphone-remark"><p style="font-size:12.6px;">The rights of trademarks and design of each product above belong to their original company.</div>
                 </div>
                 </div>
                 <div class="col-lg-8 col-sm-8">
@@ -170,9 +170,9 @@
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
                             <h2 class="section-heading">INSTANT PRICE-COMPARISON</h2>
-                            <p class="lead"><span style="color:#00caca;font-weight:600">Price Calculator&nbsp; &nbsp; </span><br><span style="font-size:17px;line-height:30px">Calculate the minimum unit price of the products.</span><br>
-                            <span style="color:#00caca;font-weight:600">Barcode Scanner&nbsp; &nbsp; </span><br><span style="font-size:17px;line-height:30px">Bring out the data of the same product you’ve entered.</span><br>
-                            <span style="color:#00caca;font-weight:600">Price Parity List&nbsp; &nbsp; </span><br><span style="font-size:17px;line-height:30px">Compare prices among similar type of products with a single button.</span></p>
+                            <p class="lead"><span style="color:#00caca;font-weight:600">Price Calculator&nbsp; &nbsp; </span><br><span style="line-height:30px">Calculate the minimum unit price of the products.</span><br>
+                            <span style="color:#00caca;font-weight:600">Barcode Scanner&nbsp; &nbsp; </span><br><span style="line-height:30px">Bring out the data of the same product you’ve entered.</span><br>
+                            <span style="color:#00caca;font-weight:600">Price Parity List&nbsp; &nbsp; </span><br><span style="line-height:30px">Compare prices among similar type of products with a single button.</span></p>
                         </div>
                         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                             <img class="img-responsive" src="img/price_parity.png" alt="">
@@ -244,8 +244,8 @@
                     </div>
                 </span>
             </div>
-            <div class="col-md-6" style="text-align: center; margin-top: 30px ">
-                <span style="font-family:'Droid Serif','PingFang-TC','Helvetica Neue','Helvetica',' Arial','sans-serif'; font-size:18px;line-height: 50px" >Keep the price anytime and anywhere.<br>Share the latest price with friends.<br>Join Keeprice and enjoy your shopping.</span>
+            <div class="col-md-6" style="text-align: center; margin-top: 30px">
+            <div class="three-points">Keep the price anytime and anywhere.<br>Share the latest price with friends.<br>Join Keeprice and enjoy your shopping.</div>
                 <!-- <button href="#contact" class="btn btn-xl">Send Message</button> -->
                 <br><br><a class="btn btn-primary btn-lg page-scroll" href="#contact">GIVE IT A TRY</a>
             </div>
