--- a/zh-Hans/index.html
+++ b/zh-Hans/index.html
@@ -218,7 +218,7 @@
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
                             <h2 class="section-heading">资讯共享</h2>
-                            <p class="lead">懒得自己输入每一笔商品资料吗？<br>那就和亲友一起共享KEEPRICE的价格记录吧！<br>让彼此为彼此省下更多荷包和打字时间。</p>
+                            <p class="lead">懒得自己输入每一笔商品资料吗？<br>那就和亲友共享KEEPRICE价格记录吧！<br>让彼此为彼此省下更多荷包和打字时间。</p>
                         </div>
                         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                             <img class="img-responsive" src="../img/share_information.png" alt="">
