--- a/zh-Hant/index.html
+++ b/zh-Hant/index.html
@@ -217,7 +217,7 @@
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
                             <h2 class="section-heading">資訊共享</h2>
-                            <p class="lead">懶得自己輸入每一筆商品資料嗎？<br>那就和親友一起共享Keeprice的價格記錄吧！<br>讓彼此為彼此省下更多荷包和打字時間。</p>
+                            <p class="lead">懶得自己輸入每一筆商品資料嗎？<br>那就和親友共享Keeprice價格記錄吧！<br>讓彼此為彼此省下更多荷包和打字時間。</p>
                         </div>
                         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                             <img class="img-responsive" src="../img/share_information.png" alt="">
