繁中/簡中 即時比價 手機版斷行修正

--- a/zh-Hans/index.html
+++ b/zh-Hans/index.html
@@ -171,10 +171,9 @@
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
                             <h2 class="section-heading">即时比价</h2>
-                            <p class="lead"><span style="color:#00caca">价格计算机&nbsp; &nbsp; </span><blank>轻松计算商品的最小单位价格。<br>
-                            <span style="color:#00caca">扫描商品条码&nbsp; &nbsp; </span>带出以往输入过的同商品资讯。<br>
-                            <span style="color:#00caca">快速比价清单&nbsp; &nbsp; </span>
-                        一键操作比较同类型之不同商品价格。</p>
+                            <p class="lead"><span style="color:#00caca;font-weight:600">价格计算机&nbsp; &nbsp; </span><br><span style="line-height:30px">轻松计算商品的最小单位价格。</span><br>
+                            <span style="color:#00caca;font-weight:600">扫描商品条码&nbsp; &nbsp; </span><br><span style="line-height:30px">带出以往输入过的同商品资讯。</span><br>
+                            <span style="color:#00caca;font-weight:600">快速比价清单&nbsp; &nbsp; </span><br><span style="line-height:30px">一键操作比较同类型之不同商品价格。</span></p>
                         </div>
                         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                             <img class="img-responsive" src="../img/price_parity.png" alt="">
