--- a/zh-Hant/index.html
+++ b/zh-Hant/index.html
@@ -171,9 +171,9 @@
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
                             <h2 class="section-heading">即時比價</h2>
-                            <p class="lead"><span style="color:#00caca">價格計算機&nbsp; &nbsp; </span><blank>輕鬆計算商品的最小單位價格。<br>
-                            <span style="color:#00caca">掃描商品條碼&nbsp; &nbsp; </span>帶出以往輸入過的同商品資訊。<br>
-                            <span style="color:#00caca">快速比價清單&nbsp; &nbsp; </span>一鍵操作比較同類型之不同商品價格。</p>
+                            <p class="lead"><span style="color:#00caca;font-weight:600">價格計算機&nbsp; &nbsp;  </span><br><span style="line-height:30px">輕鬆計算商品的最小單位價格。</span><br>
+                            <span style="color:#00caca;font-weight:600">掃描商品條碼&nbsp; &nbsp; </span><br><span style="line-height:30px">帶出以往輸入過的同商品資訊。</span><br>
+                           <span style="color:#00caca;font-weight:600">快速比價清單&nbsp; &nbsp; </span><br><span style="line-height:30px">一鍵操作比較同類型之不同商品價格。</span></p>
                         </div>
                         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                             <img class="img-responsive" src="../img/price_parity.png" alt="">
@@ -194,8 +194,7 @@
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
                             <h2 class="section-heading">記錄消費</h2>
-                            <p class="lead">
-                            總是想不起以往買過的便宜價格？<br>Keeprice幫你記得每一筆消費，讓你不再為此煩惱。<span></p>
+                            <p class="lead">總是想不起以往買過的便宜價格？<br>Keeprice幫你記得每一筆消費，讓你不再為此煩惱。<span></p>
                         </div>
                         <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                             <img class="img-responsive" src="../img/recoed_consumption.png" alt="">
